# interactive-clap

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: advanced_enum.rs  advanced_struct.rs  common.rs  (+12 more)
interactive-clap-derive/: CHANGELOG.md  Cargo.toml
interactive-clap-derive/docs/: clap_enum_for_named_arg_docstring.md  structs_from_cli_trait_docstring.md  structs_input_args_impl_docstring.md  structs_to_cli_trait_docstring.md  structs_to_interactive_clap_context_scope_trait_docstring.md
interactive-clap-derive/src/: debug.rs  lib.rs
interactive-clap-derive/src/derives/: mod.rs
interactive-clap-derive/src/derives/interactive_clap/: mod.rs
interactive-clap-derive/src/derives/interactive_clap/common_methods/: choose_variant.rs  fields_with_subcommand.rs  mod.rs
interactive-clap-derive/src/derives/interactive_clap/methods/: choose_variant.rs  cli_field_type.rs  fields_with_flatten.rs  fields_with_skip_default_input_arg.rs  fields_with_subargs.rs  fields_with_subcommand.rs  fields_without_flatten.rs  fields_without_skip_default_from_cli_arg.rs  fields_without_skip_default_input_arg.rs  from_cli_for_enum.rs  from_cli_for_struct.rs  get_arg_from_cli_for_struct.rs  input_arg.rs  interactive_clap_attrs_context.rs  mod.rs  skip_interactive_input.rs
interactive-clap-derive/src/derives/interactive_clap/structs/: clap_enum_for_named_arg.rs  clap_for_named_arg_enum.rs  from_cli_trait.rs  input_args_impl.rs  to_interactive_clap_context_scope_trait.rs
interactive-clap-derive/src/derives/to_cli_args/: mod.rs
interactive-clap-derive/src/helpers/: mod.rs  snake_case_to_camel_case.rs  to_kebab_case.rs
interactive-clap-derive/src/tests/: mod.rs  test_simple_enum.rs  test_simple_struct.rs
interactive-clap-derive/src/tests/snapshots/: interactive_clap_derive__tests__test_simple_enum__simple_enum-2.snap  interactive_clap_derive__tests__test_simple_enum__simple_enum_with_strum_discriminants-2.snap  interactive_clap_derive__tests__test_simple_enum__simple_enum_with_strum_discriminants.snap  interactive_clap_derive__tests__test_simple_struct__bug_fix_of_to_cli_args_derive-2.snap  interactive_clap_derive__tests__test_simple_struct__bug_fix_of_to_cli_args_derive.snap  interactive_clap_derive__tests__test_simple_struct__doc_comments_propagate-2.snap  interactive_clap_derive__tests__test_simple_struct__doc_comments_propagate.snap  interactive_clap_derive__tests__test_simple_struct__flag-2.snap  interactive_clap_derive__tests__test_simple_struct__flag.snap  interactive_clap_derive__tests__test_simple_struct__simple_struct-2.snap  interactive_clap_derive__tests__test_simple_struct__simple_struct.snap  interactive_clap_derive__tests__test_simple_struct__simple_struct_with_named_arg-2.snap  interactive_clap_derive__tests__test_simple_struct__simple_struct_with_named_arg.snap  interactive_clap_derive__tests__test_simple_struct__vec_multiple_opt.snap  interactive_clap_derive__tests__test_simple_struct__vec_multiple_opt_to_cli_args.snap
interactive_clap_derive/: Cargo.toml
interactive_clap_derive/src/: lib.rs
interactive_clap_derive/src/derives/interactive_clap/: mod.rs
interactive_clap_derive/src/derives/to_cli_args/: mod.rs
interactive_clap_derive/src/helpers/: mod.rs  snake_case_to_camel_case.rs  to_kebab_case.rs
(+33 files in other folders)
