[workspace]
members = [
    "interactive_clap_derive",
]

[package]
name = "interactive_clap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interactive_clap_derive = { path = "interactive_clap_derive" }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

[dev-dependencies]
shell-words = "1.0.0"

clap = { version = "4.0.18", features = ["derive"] }

inquire = "0.5"

color-eyre = "0.5"
