[workspace]
members = [
    "interactive-clap-derive",
]

[package]
name = "interactive-clap"
version = "0.2.4"
authors = ["FroVolod <frol_off@meta.ua>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FroVolod/interactive-clap"
description = "Interactive mode extension crate to Command Line Arguments Parser (https://crates.io/crates/clap)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interactive-clap-derive = { path = "interactive-clap-derive", version = "0.2.4" }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

[dev-dependencies]
shell-words = "1.0.0"

clap = { version = "4.0.18", features = ["derive"] }

inquire = "0.6"

color-eyre = "0.6"
